# gistory

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  ROADMAP.md  index.html  package-lock.json
assets/: index-B3Yjvl_S.css  index-BK3MXLO7.css  index-BwZW8alQ.js  index-Caz9Tu8d.css  index-D-jR3pBx.js  index-DSUr5iQU.js  index-Ecq-yKZx.js
frontend/: .prettier.json  .prettierrc.json  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.tsx  constants.ts  context.ts  context.tsx  hooks.ts  index.css  types.ts  utils.ts
frontend/src/components/: CommitCodeGuide.tsx  CreateRepo.tsx  Daily.tsx  Footer.tsx  GenerateButton.tsx  Header.css  Header.tsx  Image.tsx  InputCommitCount.tsx  InputDate.tsx  InputFile.tsx  InputFont.tsx  InputText.tsx  Manual.tsx  PatternInput.tsx  PatternTab.tsx  Preview.tsx  Random.tsx  RepoDetail.tsx  SelectPattern.tsx  Text.tsx  TextFilePattern.tsx  Toasts.tsx
gistory/: Cargo.toml
gistory/src/: git.rs  lib.rs  main.rs  visualizer.rs
gistory/src/git/: hash.rs  utils.rs
gistory/src/visualizer/: convert_font.py  font.rs  font.txt  font_output.txt  grid.rs
src/: error.rs  git.rs  main.rs  utils.rs  visualizer.rs
src/git/: context.rs  error.rs  hash.rs  objects.rs  prelude.rs  repo.rs
src/visualizer/: font.rs  font_subway_tracker.rs  grid.rs
webserver/: Cargo.toml  database.db  diesel.toml
webserver/migrations/2025-08-11-141725_create_repo/: down.sql  up.sql
webserver/migrations/2025-09-14-074815-0000_add_repo_status/: down.sql  up.sql
webserver/src/: constants.rs  dbconnection.rs  dto.rs  error.rs  handlers.rs  main.rs  models.rs  schema.rs  tasks.rs
