[package]
name = "gistory"
version = "0.1.0"
edition = "2024"

[dependencies]
atoi = "2.0.0"
chrono = "0.4.41"
derive_more = { version = "2.0.1", features = ["from"] }
env_logger = "0.11.8"
flate2 = "1.1.2"
hex = "0.4.3"
log = "0.4.27"
sha1 = "0.10.6"
rand = "0.9.1"
image = "0.25.6"
tokio = { version = "1.45.1", features = ["full"] }
