[package]
name = "gistory"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Create custom commit patterns to display on your GitHub profile"
homepage = "https://dthung1602.github.io/gistory/"
repository = "https://github.com/dthung1602/gistory"
readme = "README.md"
keywords = ["git", "github", "commit-graph", "git-history"]
categories = ["command-line-interface"]

[dependencies]
atoi = "2.0.0"
chrono = "0.4.41"
derive_more = { version = "2.0.1", features = ["from"] }
env_logger = "0.11.8"
flate2 = "1.1.2"
hex = "0.4.3"
log = "0.4.27"
sha1 = "0.10.6"
rand = "0.9.1"
image = "0.25.6"
tokio = { version = "1.45.1", features = ["full"] }
clap = { version = "4.5.41", features = ["derive", "string"] }
phf = { version = "0.12.1", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
