[package]
name = "webserver"
version = "0.1.0"
edition = "2024"

[dependencies]
async-compression = { version = "0.4.30", features = ["zstd", "tokio"] }
axum = { version = "0.8.4", features = ["default", "multipart"] }
axum-valid = "0.24.0"
chrono = { version = "0.4.0", features = ["serde", "rkyv"] }
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15"
env_logger = "0.11.8"
gistory = { version = "0.1.0", path = "../gistory" }
log = "0.4.27"
mime = "0.3.17"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["fs", "macros", "rt-multi-thread"] }
tokio-tar = "0.3.1"
tower-http = { version = "0.6.6", features = ["fs", "compression-full", "cors"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
http = "1.3.1"

[[bin]]
name = "foo"
path = "src/foo.rs"
